# postgate

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml  skills-lock.json  turbo.json
.agents/skills/postgate-design-tokens/: SKILL.md
.agents/skills/postgate-design-tokens/agents/: openai.yaml
.agents/skills/postgate-design-tokens/references/: tokens.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  CloudKit.schema.ckdb  Entitlements.plist  Entitlements.production.plist  tauri.cloudkit.conf.json  tauri.cloudkit.production.conf.json  tauri.conf.json
apps/desktop/src-tauri/assets/: README.md  chobitsu.js
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: app_tray.rs  capture_index.rs  cloudkit_sync.rs  error.rs  lib.rs  main.rs  rule_events.rs  state.rs
apps/desktop/src-tauri/src/api/: capture.rs  debug.rs  mod.rs  proxy.rs  replay.rs  rules.rs  types.rs  values.rs
apps/desktop/src-tauri/src/cert/: ca.rs  mod.rs  store.rs
apps/desktop/src-tauri/src/commands/: cert.rs  debug.rs  mcp.rs  mod.rs  plugin.rs  profile.rs  proxy.rs  replay.rs  rules.rs  updater.rs  values.rs  window.rs
apps/desktop/src-tauri/src/debug/: inject_script.js  injector.rs  mod.rs  server.rs  session.rs  types.rs
apps/desktop/src-tauri/src/mcp/: auth.rs  manager.rs  mod.rs  types.rs
apps/desktop/src-tauri/src/mcp/server/: inputs.rs  mod.rs  resources.rs  tools.rs  util.rs
apps/desktop/src-tauri/src/plugin/: manager.rs  mod.rs  ops.rs  plugin_wrapper.mjs  runtime.rs  storage.rs  types.rs
apps/desktop/src-tauri/src/proxy/: body.rs  chain.rs  direct_response.rs  error_page.rs  forward.rs  handler.rs  headers.rs  http2.rs  mod.rs  passthrough.rs  pool.rs  quic.rs  resource.rs  server.rs  sse.rs  throttle.rs  tls.rs  tunnel.rs  upstream.rs  websocket.rs
apps/desktop/src-tauri/src/replay/: executor.rs  mod.rs  types.rs
apps/desktop/src-tauri/src/rules/: applicator.rs  engine.rs  external.rs  mod.rs  parser.rs  types.rs
apps/desktop/src-tauri/src/storage/: captured.rs  database.rs  mcp.rs  migrations.rs  mod.rs
apps/desktop/src-tauri/src/values/: mod.rs  resolver.rs
apps/desktop/src/components/: ErrorBoundary.tsx
apps/desktop/src/components/capture/: BodyPreview.tsx  CookieDisplay.tsx  MatchedRulesDisplay.tsx  TimingWaterfall.tsx
apps/desktop/src/components/layout/: AppLayout.tsx  Header.tsx  PageHeader.tsx  PanelEmptyState.tsx  Sidebar.tsx  TitleBar.tsx  WorkspaceSidebar.tsx
apps/desktop/src/components/plugins/: PluginToastViewport.tsx
apps/desktop/src/components/rules/: ParseStatus.tsx  RuleEditor.tsx  RuleGroupList.tsx
apps/desktop/src/components/ui/: badge.tsx  button.tsx  context-menu.tsx  tabs.tsx
apps/desktop/src/hooks/: useProxy.ts
apps/desktop/src/lib/: export.ts  utils.ts
apps/desktop/src/lib/editor/: whistle-language.ts
apps/desktop/src/pages/Capture/: RequestDetail.tsx  RequestList.tsx  RequestListItem.tsx  TableHeader.tsx  Toolbar.tsx  index.tsx
apps/desktop/src/pages/Debug/: index.tsx
apps/desktop/src/pages/Plugins/: index.tsx
apps/desktop/src/pages/Replay/: index.tsx
apps/desktop/src/pages/Rules/: index.tsx
apps/desktop/src/pages/Settings/: McpAccessSection.tsx  components.tsx  index.tsx
apps/desktop/src/pages/Values/: index.tsx
apps/desktop/src/stores/: capture.ts  columns.ts  debug.ts  plugins.ts  proxy.ts  replay.ts  rules.ts  stream.ts  theme.ts  updater.ts  values.ts
apps/docs/: .gitignore  DEPLOYMENT.md  package.json  svedocs.config.ts  svelte.config.js  vite.config.ts  wrangler.jsonc
apps/docs/src/: app.html  hooks.server.ts
apps/docs/src/lib/: LandingPage.svelte  ReleaseDownload.svelte  theme.css
apps/docs/src/routes/: +error.svelte  +layout.svelte  +page.svelte  +page.ts
docs/: plugins.md  releases.md  whistle-compatibility.md
examples/postgate-plugin-example-ts/: package.json  tsconfig.json
examples/postgate-plugin-example-ts/src/: index.ts
examples/postgate-plugin-mock-api/: README.md  index.js  index.mjs  package.json
scripts/: package-setup.sh  package.sh  set-release-version.mjs
(+44 files in other folders)
