[package]
name = "postgate"
version = "0.1.0"
description = "A Tauri 2.0 based MITM proxy tool for local frontend development"
authors = ["PostGate Team"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "postgate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [ "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# HTTP/Networking
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"

# TLS
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
webpki-roots = "1"
hyper-rustls = { version = "0.27", features = ["http1", "http2", "webpki-tokio"] }

# Certificate Generation
rcgen = { version = "0.14", features = ["x509-parser"] }
x509-parser = "0.18"
pem = "3"
time = "0.3"

# HTTP/2
h2 = "0.4"

# QUIC/HTTP/3 (optional, feature-gated)
quinn = { version = "0.11", optional = true }

# Concurrent Data Structures
dashmap = "6"
parking_lot = "0.12"
moka = { version = "0.12", features = ["sync"] }

# Error Handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
glob = "0.3"
url = "2"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2"
urlencoding = "2"
if-addrs = "0.15"
tar = "0.4"
flate2 = "1"
tempfile = "3"
reqwest = { version = "0.13.3", default-features = false, features = ["rustls"] }

# JavaScript Runtime (embedded V8 via Deno Core)
deno_core = "0.400"
deno_error = "0.7.1"

# Storage
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# WebSocket
tokio-tungstenite = "0.29"
futures-util = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
quic = ["quinn"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[dev-dependencies]
tempfile = "3.27.0"
